@@ -1,3 +1,16 @@
+/**
+ * Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.gnu.org/licenses/lgpl-3.0.txt
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.kevoree.platform.service;
 
 import org.slf4j.Logger;
@@ -21,6 +34,8 @@ public class PlatformRunner {
     private static String node_bootstrap = "node.bootstrap";
     private static String node_name = "node.name";
     private static String node_headless = "node.headless";
+    private static String kevoree_version = "kevoree.version";
+    private static String java_awt_headless = "java.awt.headless";
 
     private String nodeName;
     private String version;
@@ -44,12 +59,12 @@ public class PlatformRunner {
     private static PlatformRunner initialize(String[] args) {
         logger.info("read parameters");
         String version = null;
-        boolean console = true;
+        boolean console = false;
         String modelUrl = null;
         String nodeName = null;
         for (String arg : args) {
-            if (arg.startsWith("version=")) {
-                version = arg.substring("version=".length(), arg.length());
+            if (arg.startsWith(kevoree_version + "=")) {
+                version = arg.substring((kevoree_version + "=").length(), arg.length());
             }
             if (arg.startsWith(node_bootstrap + "=")) {
                 modelUrl = arg.substring((node_bootstrap + "=").length(), arg.length());
@@ -60,6 +75,22 @@ public class PlatformRunner {
             if (arg.startsWith(node_name + "=")) {
                 nodeName = arg.substring((node_name + "=").length(), arg.length());
             }
+        }
+
+        if (version == null && System.getProperty(kevoree_version) != null && !System.getProperty(kevoree_version).equals("")) {
+            version = System.getProperty(kevoree_version);
+        }
+        if (modelUrl == null && System.getProperty(node_bootstrap) != null && !System.getProperty(node_bootstrap).equals("")) {
+            modelUrl = System.getProperty(node_bootstrap);
+        }
+        if (nodeName == null && System.getProperty(node_name) != null && !System.getProperty(node_name).equals("")) {
+            nodeName = System.getProperty(node_name);
+        }
+        if (!console && System.getProperty(node_headless) != null && !System.getProperty(node_headless).equals("")) {
+            console = "true".equals(System.getProperty(node_headless));
+        }
+        if (!console && System.getProperty(java_awt_headless) != null && !System.getProperty(java_awt_headless).equals("")) {
+            console = "true".equals(System.getProperty(java_awt_headless));
         }
         return new PlatformRunner(version, modelUrl, nodeName, console);
     }
@@ -73,7 +104,7 @@ public class PlatformRunner {
 
     private boolean resolve() {
         logger.info("resolve model and platform version");
-        if (modelUrl != null) {
+        if (modelUrl != null && version == null) {
             try {
                 version = PlatformDownloader.discoverVersion(modelUrl);
             } catch (IOException e) {
@@ -104,9 +135,22 @@ public class PlatformRunner {
         if (modelUrl != null && nodeName != null) {
             cmds.add("-Dnode.gui.config=" + false);
         }
+        for (Object key : System.getProperties().keySet()) {
+            if (System.getProperty(key.toString()).contains(" ")) {
+                cmds.add("-D" + key.toString() + "=\"" + System.getProperty(key.toString()) + "\"");
+            } else {
+                cmds.add("-D" + key.toString() + "=" + System.getProperty(key.toString()));
+            }
+        }
+
         cmds.add("-jar");
         cmds.add(platformPath);
-        final Process process = Runtime.getRuntime().exec(cmds.toArray(new String[cmds.size()]));
+
+        ProcessBuilder processBuilder = new ProcessBuilder(cmds.toArray(new String[cmds.size()]));
+        // java 7 specific
+        //processBuilder.inheritIO();
+        final Process process = processBuilder.start();
+//        final Process process = Runtime.getRuntime().exec(cmds.toArray(new String[cmds.size()]));
         new Thread() {
             @Override
             public void run() {
